--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="test.css">
+    <script type="text/javascript" src="script/script.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="test.css"> -->
     <style>
       body {
         border: none;
@@ -17,13 +16,12 @@
         left: 0;
         right: 0;
       }
-    div {
-      text-align: center;
-    }
+      div {
+        text-align: center;
+      }
     </style>
   </head>
-  
-  
+
   <body>
     <div>
       <button onclick="changeColor();">Change color</button>
